// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Colored field 1`] = `
<_class
  style={
    Object {
      "background": "#BBDEFB",
    }
  }
/>
`;

exports[`Dark tone class + light tone 1`] = `
<_class
  dark={true}
  tone="light"
/>
`;

exports[`Dark tone class + light tone class 1`] = `
<_class
  className="pe-light-tone"
  dark={true}
/>
`;

exports[`No options 1`] = `
<div
  className="pe-search pe-search--inset   "
>
  <div
    className="pe-search__content"
  >
    <TextField
      key="input"
      onChange={[Function]}
    />
  </div>
</div>
`;

exports[`Option: class 1`] = `
<div
  className="pe-search pe-search--inset   class-x"
>
  <div
    className="pe-search__content"
  >
    <TextField
      key="input"
      onChange={[Function]}
    />
  </div>
</div>
`;

exports[`Option: className 1`] = `
<div
  className="pe-search pe-search--inset   className-x"
>
  <div
    className="pe-search__content"
  >
    <TextField
      key="input"
      onChange={[Function]}
    />
  </div>
</div>
`;

exports[`Option: element 1`] = `
<a
  className="pe-search pe-search--inset   "
>
  <div
    className="pe-search__content"
  >
    <TextField
      key="input"
      onChange={[Function]}
    />
  </div>
</a>
`;

exports[`Option: id 1`] = `
<div
  className="pe-search pe-search--inset   "
  id="id-x"
>
  <div
    className="pe-search__content"
  >
    <TextField
      key="input"
      onChange={[Function]}
    />
  </div>
</div>
`;

exports[`Option: textfield 1`] = `
<Search
  after={<Shadow />}
  textfield={
    Object {
      "label": "Search",
    }
  }
/>
`;

exports[`Option: textfield, buttons (JSX) 1`] = `<_class />`;

exports[`Option: textfield, buttons (hyperscript) 1`] = `<_class />`;

exports[`Option: textfield, buttons 1`] = `<_class />`;

exports[`Option: textfield, buttons, fullWidth 1`] = `
<_class
  fullWidth={true}
/>
`;

exports[`Theme (JSX) 1`] = `
<_class
  className="tests-search-themed-search"
  tone="dark"
/>
`;

exports[`Theme -- dark tone class 1`] = `
<_class
  className="tests-search-themed-search"
  dark={true}
/>
`;

exports[`Theme 1`] = `
<_class
  className="tests-search-themed-search"
  tone="dark"
/>
`;

exports[`With search results 1`] = `<_class />`;
